# xontrib-navi

./: .gitignore  Changelog.md  ReadMe.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_xontrib.py
xontrib/: navi.py
