[tool.poetry]
name       	= "xontrib-navi"
version    	= "0.0.5"
description	= "Navi (interactive cli cheatsheet) integration"
authors    	= ["Evgeny <es.bugzilla@gmail.com>"]
license    	= "MIT"
readme     	= "ReadMe.md"
repository 	= "https://github.com/eugenesvk/xontrib-navi"
keywords   	= ['xontrib', 'xonsh']

classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: System :: Shells",
  "Topic :: System :: System Shells",
  "Topic :: Terminals",
  "Programming Language :: Python :: 3",
]

packages	= [{ include = "xontrib" }]

[tool.poetry.urls]
Homepage       	= "https://github.com/eugenesvk/xontrib-navi"
Documentation  	= "https://github.com/eugenesvk/xontrib-navi/blob/master/ReadMe.md"
Code           	= "https://github.com/eugenesvk/xontrib-navi"
"Issue tracker"	= "https://github.com/eugenesvk/xontrib-navi/issues"

[tool.poetry.dependencies]
python	= ">=3.9,<4.0"
xonsh 	= ">=0.18.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.2"

[build-system]
requires     	= ["poetry-core>=1.5.0"]
build-backend	= "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
include      	= '\.pyi?$'
force-exclude	= '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''
